# tdmctl

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
tdmctl/: __main__.py  api.py  main.py
tdmctl/commands/: __init__.py  config.py  context.py
tdmctl/commands/system/: __init__.py  group.py
tdmctl/core/: Api.py  Context.py  ContextManager.py  __init__.py
tests/: test_tdmctl.py
