[tool.poetry]
name = "tdmctl"
version = "0.1.0"
description = "command line tool client for TouDoum-Framework"
authors = ["Gabin Lanore <gabin.lanore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
columnar = "^1.4.1"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
